--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
     values:
       layout: post
 
-gems: ["jekyll-paginate", "jekyll-sitemap", "jekyll-seo-tag"]
+plugins: ["jekyll-paginate", "jekyll-sitemap", "jekyll-seo-tag"]
 
 paginate: 16
 
